dfir_rs/tests/compile-fail/nightly/surface_handoff_generics.stderr
error: `handoff` takes no generic arguments.
 --> tests/compile-fail/nightly/surface_handoff_generics.rs:5:31
  |
5 |         source_iter(0..10) -> handoff::<'static>() -> for_each(std::mem::drop);
  |                               ^^^^^^^^^^^^^^^^^^
